--- a/code/API_definitions/device-status.yaml
+++ b/code/API_definitions/device-status.yaml
@@ -120,7 +120,7 @@ tags:
     description: Operation to manage event subscription on device status event (roaming, connectivity)
 
 paths:
-  /connectivity:
+  /retrieve-connectivity-status:
     post:
       tags:
         - Device connectivity status
@@ -129,7 +129,7 @@ paths:
       operationId: getConnectivityStatus
       security:
         - openId:
-            - device-status:connectivity:read
+            - device-status:retrieve-connectivity-status:read
       requestBody:
         content:
           application/json:
@@ -165,7 +165,7 @@ paths:
           $ref: "#/components/responses/Generic500"
         "503":
           $ref: "#/components/responses/Generic503"
-  /roaming:
+  /retrieve-roaming-status:
     post:
       tags:
         - Device roaming status
@@ -174,7 +174,7 @@ paths:
       operationId: getRoamingStatus
       security:
         - openId:
-            - device-status:roaming:read
+            - device-status:retrieve-roaming-status:read
       requestBody:
         content:
           application/json:
